--- a/src/styles/ptCollage/ptCollage.qss
+++ b/src/styles/ptCollage/ptCollage.qss
@@ -4,7 +4,7 @@ QTabWidget>QWidget {
 }
 
 QMessageBox::about {
-  background: url("awesome.png");
+  background: url("image/awesome.png");
 }
 
 QPushButton,
@@ -29,7 +29,7 @@ QMenu {
   border: 1px transparent;
   background-color: #837E78;
   color: #00003E;
-  border-image: url("menu-border.png") 1px fill;
+  border-image: url("image/menu-border.png") 1px fill;
 }
 
 QCheckBox {
@@ -76,22 +76,25 @@ QHeaderView::section:hover {
   background-color: #9D9784;
 }
 
-QHeaderView::section:pressed {
-  font-weight: bold;
-}
-
 QTableWidget,
-QTableView {
+QTableView,
+QListWidget,
+QListView {
   gridline-color: #4E4B61;
   selection-background-color: #69656D;
   selection-color: #00F080;
   border: 1px transparent;
-  border-image: url("generic-frame.png"), 1px 1px 1px 1px, stretch stretch;
+  border-image: url("image/generic-frame.png"), 1px 1px 1px 1px, stretch stretch;
 }
 
 QTableView::item {
   background-color: none;
   border: none;
+}
+
+QHeaderView::section,
+QTableView::item {
+  padding-left: 1px;
 }
 
 QTableView::item:hover {
@@ -103,22 +106,27 @@ QTableView QTableCornerButton::section {
   border: 3px inset transparent;
 }
 
+QTableCornerButton::section {
+  width: 0;
+}
+
 QHeaderView {
   color: #4E4B61;
 }
 
 QMenuBar {
-  border-image: url("menubar-border.png") / 0px 0px 1px 0px fill / stretch stretch;
+  border-image: url("image/menubar-border.png") / 0px 0px 1px 0px fill / stretch stretch;
   border-bottom: 2px transparent;
+  spacing: 0px;
 }
 
 QMenuBar::item {
-  padding: 4px 6px;
+  padding: 4px 8px;
 }
 
 QMenuBar::item:pressed,
 QMenuBar::item:selected {
-  border-image: url("menubar-item-border-active.png"), 0px 0px 2px 0px fill, stretch stretch;
+  border-image: url("image/menubar-item-border-active.png"), 0px 0px 2px 0px fill, stretch stretch;
   border-bottom: 2px transparent;
 }
 
@@ -126,7 +134,7 @@ QTabBar::tab {
   padding: 3px 8px 2px 8px;
   color: #837E78;
   background-color: #4E4B61;
-  border-image: url("tab-border-inactive.png"), 3px 4px 2px 4px fill, stretch stretch;
+  border-image: url("image/tab-border-inactive.png"), 3px 4px 2px 4px fill, stretch stretch;
   border-top: 3px transparent;
   border-left: 4px transparent;
   border-right: 4px transparent;
@@ -138,13 +146,13 @@ QTabBar::tab:selected {
   margin: 0;
   padding-bottom: 3px;
   color: #D2CA9C;
-  border-image: url("tab-border-active.png"), 3px 4px 2px 4px fill, stretch stretch;
+  border-image: url("image/tab-border-active.png"), 3px 4px 2px 4px fill, stretch stretch;
 }
 
 QTabWidget::pane,
 QGroupBox {
   border: 4px transparent;
-  border-image: url("frame-border.png"), 4px 4px 4px 4px fill, stretch stretch;
+  border-image: url("image/frame-border.png"), 4px 4px 4px 4px fill, stretch stretch;
 }
 
 QGroupBox {
@@ -160,11 +168,11 @@ QComboBox {
   border-left: 2px transparent;
   border-bottom: 2px transparent;
   border-right: 1px transparent;
-  border-image: url("combobox-border.png"), 2px 1px 2px 2px fill, stretch stretch;
+  border-image: url("image/combobox-border.png"), 2px 1px 2px 2px fill, stretch stretch;
 }
 
 QComboBox::down-arrow {
-  image: url("combobox-button-image.png");
+  image: url("image/combobox-button-image.png");
 }
 
 QComboBox::drop-down {
@@ -172,13 +180,13 @@ QComboBox::drop-down {
   border-left: 3px transparent;
   border-bottom: 2px transparent;
   border-right: 2px transparent;
-  border-image: url("combobox-button-border-idle.png"), 2px 2px 2px 3px, stretch stretch;
+  border-image: url("image/combobox-button-border-idle.png"), 2px 2px 2px 3px, stretch stretch;
 }
 
 QComboBox QAbstractItemView {
   background-color: #9D9784;
   border: 1px transparent;
-  border-image: url("menu-border.png") 1px fill;
+  border-image: url("image/menu-border.png") 1px fill;
   selection-background-color: #D2CA9C;
 }
 
@@ -191,13 +199,13 @@ QTableView::indicator {
 QCheckBox::indicator:unchecked,
 QGroupBox::indicator:unchecked,
 QTableView::indicator:unchecked {
-  border-image: url("checkbox-border-off.png"), 2px 2px 2px 2px fill, stretch stretch;
+  border-image: url("image/checkbox-border-off.png"), 2px 2px 2px 2px fill, stretch stretch;
 }
 
 QCheckBox::indicator:checked,
 QGroupBox::indicator:checked,
 QTableView::indicator:checked {
-  border-image: url("checkbox-border-on.png"), 2px 2px 2px 2px fill, stretch stretch;
+  border-image: url("image/checkbox-border-on.png"), 2px 2px 2px 2px fill, stretch stretch;
 }
 
 QFrame {
@@ -207,17 +215,17 @@ QFrame {
 QLineEdit {
   font-weight: bold;
   border: 1px transparent;
-  border-image: url("lineedit-border.png"), 1px 1px 1px 1px fill, stretch stretch;
+  border-image: url("image/lineedit-border.png"), 1px 1px 1px 1px fill, stretch stretch;
 }
 
 QPushButton {
   padding: 2px 16px;
   border: 2px transparent;
-  border-image: url("button-border-idle.png"), 2px 2px 2px 2px fill, stretch stretch;
+  border-image: url("image/button-border-idle.png"), 2px 2px 2px 2px fill, stretch stretch;
 }
 
 QPushButton:pressed {
-  border-image: url("button-border-pressed.png"), 2px 2px 2px 2px fill, stretch stretch;
+  border-image: url("image/button-border-pressed.png"), 2px 2px 2px 2px fill, stretch stretch;
 }
 
 QSlider::groove:horizontal {
@@ -227,21 +235,21 @@ QSlider::groove:horizontal {
 
 QSlider::sub-page {
   border: 1px transparent;
-  border-image: url("slider-border.png"), 1px 1px 1px 1px fill, stretch stretch;
+  border-image: url("image/slider-border.png"), 1px 1px 1px 1px fill, stretch stretch;
 }
 
 QSlider::handle:horizontal {
   border: 1px transparent;
-  width: 7px;
-  margin-top: -4px;
-  margin-bottom: -4px;
-  border-image: url("slider-handle.png"), 1px 1px 1px 1px fill, stretch stretch;
+  width: 6px;
+  margin-top: -3px;
+  margin-bottom: -3px;
+  border-image: url("image/slider-handle.png"), 1px 1px 1px 1px fill, stretch stretch;
 }
 
 QAbstractScrollArea::corner {
   width: 16px;
   height: 16px;
-  background-image: url("scrollbar-median.png");
+  background-image: url("image/scrollbar-median.png");
 }
 
 QScrollBar,
@@ -252,12 +260,12 @@ QScrollBar::sub-line {
 
 QScrollBar::vertical {
   width: 16px;
-  background-image: url("scrollbar-rail-vertical.png");
+  background-image: url("image/scrollbar-rail-vertical.png");
 }
 
 QScrollBar::horizontal {
   height: 16px;
-  background-image: url("scrollbar-rail-horizontal.png");
+  background-image: url("image/scrollbar-rail-horizontal.png");
 }
 
 QScrollBar::add-line,
@@ -311,38 +319,41 @@ QScrollBar::handle:horizontal {
 }
 
 QScrollBar::left-arrow {
-  image: url("scrollbar-left-idle.png");
+  image: url("image/scrollbar-left-idle.png");
 }
 
 QScrollBar::right-arrow {
-  image: url("scrollbar-right-idle.png");
+  image: url("image/scrollbar-right-idle.png");
 }
 
 QScrollBar::up-arrow {
-  image: url("scrollbar-up-idle.png");
+  image: url("image/scrollbar-up-idle.png");
 }
 
 QScrollBar::down-arrow {
-  image: url("scrollbar-down-idle.png");
+  image: url("image/scrollbar-down-idle.png");
 }
 
 QScrollBar::left-arrow:hover,
 QScrollBar::left-arrow:pressed {
-  image: url("scrollbar-left-down.png");
+  image: url("image/scrollbar-left-down.png");
 }
 
 QScrollBar::right-arrow:hover,
 QScrollBar::right-arrow:pressed {
-  image: url("scrollbar-right-down.png");
+  image: url("image/scrollbar-right-down.png");
 }
 
 QScrollBar::up-arrow:hover,
 QScrollBar::up-arrow:pressed {
-  image: url("scrollbar-up-down.png");
+  image: url("image/scrollbar-up-down.png");
 }
 
 QScrollBar::down-arrow:hover,
 QScrollBar::down-arrow:pressed {
-  image: url("scrollbar-down-down.png");
+  image: url("image/scrollbar-down-down.png");
 }
 
+* {
+  outline: none;
+}
