--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -187,7 +187,7 @@
           <item>
            <widget class="QLabel" name="label_4">
             <property name="toolTip">
-             <string extracomment="Pattern of white and black keys to fill the octave. Use Snap-Y in the sidemenu to select input edo"/>
+             <string extracomment="Pattern of white and black keys to fill the octave, starting on A. Use Snap-Y in the sidemenu to select input edo"/>
             </property>
             <property name="text">
              <string>Background piano pattern (?)</string>
