--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -138,6 +138,13 @@
         <widget class="QCheckBox" name="showVolumeMeterLabelsCheck">
          <property name="text">
           <string>Show peak meter numbers</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="pinnedUnitLabelCheck">
+         <property name="text">
+          <string>Display pinned unit name labels</string>
          </property>
         </widget>
        </item>
