--- a/src/icons.qrc
+++ b/src/icons.qrc
@@ -8,6 +8,7 @@
         <file alias="save">icons/neutral/document-save.svg</file>
         <file alias="up">icons/neutral/go-up.svg</file>
         <file alias="down">icons/neutral/go-down.svg</file>
+        <file alias="pin">icons/neutral/pin.svg</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="images">images.png</file>
