--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -137,6 +137,11 @@
      </row>
      <row>
       <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
        <string/>
       </property>
      </row>
@@ -432,190 +437,200 @@
      </item>
      <item row="19" column="0">
       <property name="text">
-       <string>E/D</string>
+       <string>R + click</string>
       </property>
      </item>
      <item row="19" column="1">
       <property name="text">
-       <string>Cycle parameter</string>
+       <string>Jump to unit in piano roll</string>
       </property>
      </item>
      <item row="20" column="0">
       <property name="text">
-       <string>F</string>
+       <string>E/D</string>
       </property>
      </item>
      <item row="20" column="1">
       <property name="text">
-       <string>Follow playhead</string>
+       <string>Cycle parameter</string>
       </property>
      </item>
      <item row="21" column="0">
       <property name="text">
-       <string>F1..F4</string>
+       <string>F</string>
       </property>
      </item>
      <item row="21" column="1">
       <property name="text">
-       <string>Switch tabs</string>
+       <string>Follow playhead</string>
       </property>
      </item>
      <item row="22" column="0">
       <property name="text">
-       <string>C</string>
+       <string>F1..F4</string>
       </property>
      </item>
      <item row="22" column="1">
       <property name="text">
-       <string>Toggle if a parameter is copied</string>
+       <string>Switch tabs</string>
       </property>
      </item>
      <item row="23" column="0">
       <property name="text">
-       <string>Shift+D</string>
+       <string>C</string>
       </property>
      </item>
      <item row="23" column="1">
       <property name="text">
-       <string>Toggle dark piano roll</string>
+       <string>Toggle if a parameter is copied</string>
       </property>
      </item>
      <item row="24" column="0">
       <property name="text">
-       <string>M</string>
+       <string>Shift+D</string>
       </property>
      </item>
      <item row="24" column="1">
       <property name="text">
-       <string>Toggle mute</string>
+       <string>Toggle dark piano roll</string>
       </property>
      </item>
      <item row="25" column="0">
       <property name="text">
-       <string>Shift+M</string>
+       <string>M</string>
       </property>
      </item>
      <item row="25" column="1">
       <property name="text">
-       <string>Cycle solo (between current unit, selected units, all)</string>
+       <string>Toggle mute</string>
       </property>
      </item>
      <item row="26" column="0">
       <property name="text">
-       <string>J,L</string>
+       <string>Shift+M</string>
       </property>
      </item>
      <item row="26" column="1">
       <property name="text">
-       <string>Step forward / back (useful for MIDI input)</string>
+       <string>Cycle solo (between current unit, selected units, all)</string>
       </property>
      </item>
      <item row="27" column="0">
       <property name="text">
-       <string>Ctrl+L</string>
+       <string>J,L</string>
       </property>
      </item>
      <item row="27" column="1">
       <property name="text">
-       <string>Toggle auto-step forward on note input</string>
+       <string>Step forward / back (useful for MIDI input)</string>
       </property>
      </item>
      <item row="28" column="0">
       <property name="text">
-       <string>I,K</string>
+       <string>Ctrl+L</string>
       </property>
      </item>
      <item row="28" column="1">
       <property name="text">
-       <string>Increase / decrease step size (useful for MIDI)</string>
+       <string>Toggle auto-step forward on note input</string>
       </property>
      </item>
      <item row="29" column="0">
       <property name="text">
-       <string>Alt+Q</string>
+       <string>I,K</string>
       </property>
      </item>
      <item row="29" column="1">
       <property name="text">
-       <string>Quantize selection to note snap (useful for MIDI)</string>
+       <string>Increase / decrease step size (useful for MIDI)</string>
       </property>
      </item>
      <item row="30" column="0">
       <property name="text">
-       <string>Shift+Alt+Q</string>
+       <string>Alt+Q</string>
       </property>
      </item>
      <item row="30" column="1">
       <property name="text">
-       <string>Quantize selection to tuning scale</string>
+       <string>Quantize selection to note snap (useful for MIDI)</string>
       </property>
      </item>
      <item row="31" column="0">
       <property name="text">
-       <string>Ctrl+P</string>
+       <string>Shift+Alt+Q</string>
       </property>
      </item>
      <item row="31" column="1">
       <property name="text">
-       <string>Toggle preview with all units</string>
+       <string>Quantize selection to tuning scale</string>
       </property>
      </item>
      <item row="32" column="0">
       <property name="text">
-       <string>Alt+(Shift)+(Left/Right)</string>
+       <string>Ctrl+P</string>
       </property>
      </item>
      <item row="32" column="1">
       <property name="text">
-       <string>Tweak selection</string>
+       <string>Toggle preview with all units</string>
       </property>
      </item>
      <item row="33" column="0">
       <property name="text">
-       <string>(Shift)+N</string>
+       <string>Alt+(Shift)+(Left/Right)</string>
       </property>
      </item>
      <item row="33" column="1">
       <property name="text">
-       <string>New voice (unit)</string>
+       <string>Tweak selection</string>
       </property>
      </item>
      <item row="34" column="0">
       <property name="text">
-       <string>Ctrl+Shift+(A/D)</string>
+       <string>(Shift)+N</string>
       </property>
      </item>
      <item row="34" column="1">
       <property name="text">
-       <string>(De)select all units</string>
+       <string>New voice (unit)</string>
       </property>
      </item>
      <item row="35" column="0">
       <property name="text">
-       <string>Ctrl+C, Ctrl+V</string>
+       <string>Ctrl+Shift+(A/D)</string>
       </property>
      </item>
      <item row="35" column="1">
       <property name="text">
-       <string>Copy, paste (at selection start)</string>
+       <string>(De)select all units</string>
       </property>
      </item>
      <item row="36" column="0">
       <property name="text">
-       <string>Ctrl+Shift+V</string>
+       <string>Ctrl+C, Ctrl+V</string>
       </property>
      </item>
      <item row="36" column="1">
       <property name="text">
-       <string>Paste at selection end</string>
+       <string>Copy, paste (at selection start)</string>
       </property>
      </item>
      <item row="37" column="0">
       <property name="text">
-       <string>Ctrl+Shift+C</string>
+       <string>Ctrl+Shift+V</string>
       </property>
      </item>
      <item row="37" column="1">
+      <property name="text">
+       <string>Paste at selection end</string>
+      </property>
+     </item>
+     <item row="38" column="0">
+      <property name="text">
+       <string>Ctrl+Shift+C</string>
+      </property>
+     </item>
+     <item row="38" column="1">
       <property name="text">
        <string>Toggle copy options dialog</string>
       </property>
