--- a/src/styles/ptCollage/ptCollage.qss
+++ b/src/styles/ptCollage/ptCollage.qss
@@ -9,7 +9,8 @@ QMessageBox::about {
 
 QPushButton,
 QLineEdit,
-QComboBox {
+QComboBox,
+QSpinBox {
   padding: 2px 6px;
 }
 
@@ -46,7 +47,8 @@ QMenuBar::item {
 }
 
 QLineEdit,
-QListView {
+QListView,
+QSpinBox {
   color: #00F080;
 }
 
@@ -212,7 +214,8 @@ QFrame {
   background-color: #4E4B61;
 }
 
-QLineEdit {
+QLineEdit,
+QSpinBox {
   font-weight: bold;
   border: 1px transparent;
   border-image: url("image/lineedit-border.png"), 1px 1px 1px 1px fill, stretch stretch;
