--- a/src/editor/NewWoiceDialog.ui
+++ b/src/editor/NewWoiceDialog.ui
@@ -72,7 +72,20 @@
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="previewKeySpin"/>
+           <widget class="QSpinBox" name="previewKeySpin">
+            <property name="buttonSymbols">
+             <enum>QAbstractSpinBox::NoButtons</enum>
+            </property>
+            <property name="minimum">
+             <number>40</number>
+            </property>
+            <property name="maximum">
+             <number>150</number>
+            </property>
+            <property name="value">
+             <number>96</number>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QLabel" name="label_6">
