--- a/src/styles.qrc
+++ b/src/styles.qrc
@@ -35,7 +35,7 @@
         <file>styles/ptCollage/config.ini</file>
         <file>styles/ptCollage/images.png</file>
         <file>styles/ptCollage/ptCollage.qss</file>
-        <file>styles/palette.ini.md</file>
+        <file>styles/config.ini.md</file>
         <file>styles/README.md</file>
     </qresource>
 </RCC>
