--- a/src/editor/NewWoiceDialog.ui
+++ b/src/editor/NewWoiceDialog.ui
@@ -63,7 +63,7 @@
          <property name="title">
           <string>Preview</string>
          </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,1,1,100">
+         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="1,0,1,100">
           <item>
            <widget class="QLabel" name="label_7">
             <property name="text">
@@ -72,7 +72,20 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="previewKeyLine"/>
+           <widget class="KeySpinBox" name="previewKeySpin">
+            <property name="buttonSymbols">
+             <enum>QAbstractSpinBox::NoButtons</enum>
+            </property>
+            <property name="minimum">
+             <number>40</number>
+            </property>
+            <property name="maximum">
+             <number>150</number>
+            </property>
+            <property name="value">
+             <number>96</number>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QLabel" name="label_6">
@@ -212,6 +225,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>KeySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>editor/KeySpinBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
