record midi checkbox

--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -300,6 +300,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="recordMidiCheck">
+         <property name="text">
+          <string>Record (instead of preview) (Ctrl+R)</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
