--- a/src/editor/ShortcutsDialog.ui
+++ b/src/editor/ShortcutsDialog.ui
@@ -235,6 +235,11 @@
        <string>New Row</string>
       </property>
      </row>
+     <row>
+      <property name="text">
+       <string>New Row</string>
+      </property>
+     </row>
      <column>
       <property name="text">
        <string>Shortcut</string>
@@ -577,60 +582,70 @@
      </item>
      <item row="33" column="0">
       <property name="text">
-       <string>Alt+(Shift)+(Left/Right)</string>
+       <string>Ctrl+R</string>
       </property>
      </item>
      <item row="33" column="1">
       <property name="text">
-       <string>Tweak selection</string>
+       <string>Toggle MIDI recording mode</string>
       </property>
      </item>
      <item row="34" column="0">
       <property name="text">
-       <string>(Shift)+N</string>
+       <string>Alt+(Shift)+(Left/Right)</string>
       </property>
      </item>
      <item row="34" column="1">
       <property name="text">
-       <string>New voice (unit)</string>
+       <string>Tweak selection</string>
       </property>
      </item>
      <item row="35" column="0">
       <property name="text">
-       <string>Ctrl+Shift+(A/D)</string>
+       <string>(Shift)+N</string>
       </property>
      </item>
      <item row="35" column="1">
       <property name="text">
-       <string>(De)select all units</string>
+       <string>New voice (unit)</string>
       </property>
      </item>
      <item row="36" column="0">
       <property name="text">
-       <string>Ctrl+C, Ctrl+V</string>
+       <string>Ctrl+Shift+(A/D)</string>
       </property>
      </item>
      <item row="36" column="1">
       <property name="text">
-       <string>Copy, paste (at selection start)</string>
+       <string>(De)select all units</string>
       </property>
      </item>
      <item row="37" column="0">
       <property name="text">
-       <string>Ctrl+Shift+V</string>
+       <string>Ctrl+C, Ctrl+V</string>
       </property>
      </item>
      <item row="37" column="1">
       <property name="text">
-       <string>Paste at selection end</string>
+       <string>Copy, paste (at selection start)</string>
       </property>
      </item>
      <item row="38" column="0">
       <property name="text">
-       <string>Ctrl+Shift+C</string>
+       <string>Ctrl+Shift+V</string>
       </property>
      </item>
      <item row="38" column="1">
+      <property name="text">
+       <string>Paste at selection end</string>
+      </property>
+     </item>
+     <item row="39" column="0">
+      <property name="text">
+       <string>Ctrl+Shift+C</string>
+      </property>
+     </item>
+     <item row="39" column="1">
       <property name="text">
        <string>Toggle copy options dialog</string>
       </property>
