--- a/src/editor/SettingsDialog.ui
+++ b/src/editor/SettingsDialog.ui
@@ -314,6 +314,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="velocitySensitivityCheck">
+         <property name="text">
+          <string>Velocity sensitivity</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
